<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">e-Trucks</string>
    <string name="auth_error">Usuário ou senha inválidos</string>
    <string name="hint_login">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="btn">Login</string>
    <string name="cadastro_caminhoneiro">Cadastro Motorista</string>
    <string name="cadastro_embarcador">Cadastro Embarcador</string>
    <string name="cadastro_transportador">Cadastro Transportador</string>
    <string name="embarcador">Sou Embarcador</string>
    <string name="transportador">Sou Transportador</string>
    <string name="caminhoneiro">Sou Motorista</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="id">Identidade</string>
    <string name="endereco">Endereço</string>
    <string name="CEP">CEP</string>
    <string name="email">E-mail</string>
    <string name="celular">Celular</string>
    <string name="cadastro_veiculo">Cadastro Veículo</string>
    <string name="veiculo">Veículo</string>
    <string name="placa">Placa</string>
    <string name="modelo">Modelo</string>
    <string name="ano">Ano</string>
    <string name="combustivel">Combustível</string>
    <string name="concluir">Concluir Cadastro</string>
    <string name="nome_caminhoneiro">Olá, João das Couves.</string>
    <string name="status">Status do cadastro</string>
    <string name="clientes_near">Clientes próximos</string>
    <string name="about">Meu perfil</string>
    <string name="novo_servico">Cadastrar serviço</string>
    <string name="nome_embarcador">Embarcador</string>
    <string name="cnpj_embarcador">CNPJ</string>
    <string name="endereco_embarcador">Endereço</string>
    <string name="cep_embarcador">CEP</string>
    <string name="email_embarcador">E-mail</string>
    <string name="welcome_caminhao">Olá, motorista.</string>
    <string name="welcome_embarcador">Olá, embarcador.</string>
    <string name="welcome_transportador">Olá, transportador.</string>
    <string name="tipodeproduto">Tipo de produto</string>
    <string name="empresa">Olá, empresa São Lourenço.</string>
    <string name="viagens_realizadas">Viagens Realizadas</string>
    <string name="notificacoes" tools:ignore="DuplicateDefinition">Notificações de  infração</string>
    <string name="precos_oferta">Preços ofertados pelo transporte de mercadorias</string>
    <string name="meu_cadastro">Meu cadastro</string>
    <string name="melhor_rota">Melhor rota</string>
    <string name="cadastro_motorista">Cadastro de motorista</string>
    <string name="notificacoesX">Notificações</string>
    <string name="cadastro_propostos">Cadastro de preços propostos</string>
    <string name="cadastros_proximos">Cadastro de futuras entregas</string>
    <string name="notifca">Notificações</string>
    <string name="usiminas">Olá, empresa Usiminas.</string>
    <string name="logintype">Escolha o tipo de login:</string>
    <string name="autonomo">Autônomo</string>
    <string name="transport">Motorista da Transportadora</string>
    <string name="alerta">Alerta:</string>
    <string name="alert2">Emitir alerta:</string>
    <string name="e_transports">e-Trucks</string>
    <string name="tipo_produto">Especificação de veículo</string>
    <string name="payment">Pagamento</string>
</resources>
